ms2/ms2-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ms2
  namespace: default
  labels:
    example: ms2-route
spec:
  parentRefs:
    - name: http
      namespace: gloo-system
  rules:
    - backendRefs:
        - kind:  Service
          name: ms2-service
          port: 9000
      matches:
        - path:
            type: PathPrefix
            value: /service2
